# minizen

./: .gitignore  Dockerfile  Makefile.am  README.md  configure.ac
include/: Makefile.am
include/minizen/: Makefile.am
lib/: Makefile.am  db.c
src/: .gitignore  Makefile.am  db.c  db.h  filter.c  filter.h  formatter.c  formatter.h  minizen-performance.c  minizen-search.c  minizen.c  minizen.h  performance.c
test/: .gitignore  Makefile.am  test-db.c  test-filter.c  unit-tests.c  unit-tests.h
test/data/invalid/: users.json
test/data/partial/: users.json
